# dsam_model_memory

./: .env.example  .gitattributes  .gitignore  6.0.0  CLAUDE.md  CONCEPTS.md  DATABASE_SCHEMA.md  ENHANCEMENTS.md  ENHANCEMENT_SUMMARY.md  EXPERIMENTS.md  README.md  RETRIEVAL_INVESTIGATION_TODO.md  TECHNICAL.md  UI_FEATURES.md  amemory.sqlite3  amemory.sqlite3-shm  amemory.sqlite3-wal  analyze_conceptual_similarity.py  analyzer_settings.json  check_dataset_structure.py  check_locations.py  check_memory_data.py  check_merge_collections.py  check_most_recent_temporal.py  check_temporal_group_events.py  check_temporal_metadata.py  check_timestamps_api.py  cleanup_database.py  clear_db.py  clear_memories.py  cli.py  config.py  debug_benchmark.py  debug_benchmark_semantic.py  debug_locations.py  debug_retrieval.py  debug_semantic.py  debug_store.py  faiss.index  faiss.index.map  (+43 more)
agent/: __init__.py  memory_agent.py
agentic_memory/: __init__.py  attention.py  benchmark.py  block_builder.py  cli.py  config.py  config_manager.py  document_parser.py  import_export.py  import_processor.py  retrieval.py  router.py  settings_manager.py  tokenization.py  types.py  usage.py
benchmark/: __init__.py  baselines.py  evaluator.py  generate_benchmark_dataset.py  generate_benchmark_dataset_fast.py  generate_extended_conversations.py  load_benchmark.py
benchmark_datasets/: benchmark_20250827_054438.json  benchmark_20250827_054438_queries.json  benchmark_20250829_044123.json  benchmark_20250829_044123_queries.json  benchmark_20250830_064528.json  benchmark_20250830_064528_queries.json  dataset_small_llm_20250901_035752.json
benchmarks/: README.md  __init__.py  amemory.sqlite3  analyze_lmsys.py  baseline_retrieval.py  cli.py  core.py  generate_benchmark_testset.py  generate_semantic_testset.py  recall_benchmark.py  scenarios.py  semantic_similarity_eval.py  temporal_recall_benchmark.py  test_flask_retrieval.py
config/: llm_server.env
data/: amemory.sqlite3  faiss.index  import_lmsys_data.py  query_dimension_examples.jsonl
docs/: CONCEPTS.md  LLAMA_CPP_SERVER_GUIDE.md  TECHNICAL.md
embedding/: __init__.py  embedder.py  singleton_embedder.py
helpers/: analyze_imports.py  faiss_search.py  rebuild_index.py
import/: __init__.py
jam_model_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm/: __init__.py  llm_interface.py  salience_model.py
lora/: README.md  auto_lora.py  requirements.txt
memory/: __init__.py  adaptive_embeddings.py  block_manager.py  chromadb_store.py  context_generator.py  dimension_attention_retriever.py  dual_space_encoder.py  dynamic_clustering.py  dynamic_memory_store.py  field_generator.py  hopfield.py  hopfield_dynamic.py  learned_dimension_classifier.py  memory_store.py  merge_group_field_generator.py  multi_dimensional_merger.py  qdrant_store.py  similarity_cache.py  smart_merger.py  temporal_chain.py  temporal_manager.py  temporal_query.py  tool_memory_helper.py
models/: __init__.py  event.py  memory_block.py  merge_types.py  merged_event.py
state/: adaptive_embeddings.json  episode_map.json  residuals.pkl
templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_benchmark.py  test_chromadb.py  test_chromadb_directly.py  test_collections.py  test_conceptual_retrieval.py  test_cyan_edges.py  test_detailed_temporal.py  test_dimension_weighting.py  test_dual_space.py  test_dynamic_features.py  test_embedding_server.py  test_enhanced_retrieval.py  test_extraction.py  test_field_generation.py  test_frontend.html  test_graph_complete.html  test_import_export.py  test_integration.py  test_integrations.py  test_llm_dataset.py  test_memory_fields.py  test_memory_store.py  test_merged_events.py  test_model.py  test_scaling_regeneration.py  test_similarity_cache.py  test_size_based_regeneration.py  test_smoke.py  test_storage.py  test_temporal.py  test_temporal_detection.py  test_temporal_grouping.py  test_temporal_query.py  test_tools.py  (+1 more)
(+51 files in other folders)
